--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -40,7 +40,9 @@
       <div class="content">
         <h1>play traditional game</h1>
         <p>experience new traditional game play</p>
-        <button class="btn btn-warning">play now</button>
+        <a href="../game/index.html">
+          <button class="btn btn-warning">trial</button>
+        </a>
       </div>
       <div class="scroll-down text-center">
         <h6>the story</h6>
