--- a/game/index.html
+++ b/game/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="navigation">
         <div class="back-btn">
-          <a href="../chapter-3/index.html">&lt;</a>
+          <a href="../landingpage/index.html">&lt;</a>
         </div>
         <div class="logo">
           <img src="assets/logo.png" alt="logo" />
