revision html/css chapter-4

--- a/game/index.html
+++ b/game/index.html
@@ -24,31 +24,36 @@
         <div class="player">
           <h3 class="name">player</h3>
           <div class="box-choice">
-            <div class="rock box">
+            <div class="rock box" id="rock-player">
               <img src="assets/batu.png" alt="rock" />
             </div>
-            <div class="paper box">
+            <div class="paper box" id="paper-player">
               <img src="assets/kertas.png" alt="paper" />
             </div>
-            <div class="scissors box">
+            <div class="scissors box" id="scissors-player">
               <img src="assets/gunting.png" alt="scissor" />
             </div>
           </div>
         </div>
         <div class="middle-game">
-          <div class="result">vs</div>
-          <img src="assets/refresh.png" alt="resfresh-button" />
+          <div class="versus">vs</div>
+          <div class="result">
+            <div class="draw" id="draw">draw</div>
+            <div class="win" id="win">you win</div>
+            <div class="lose" id="lose">you lose</div>
+          </div>
+          <img src="assets/refresh.png" alt="resfresh-button" id="refresh-game" />
         </div>
         <div class="com">
           <h3 class="name">com</h3>
           <div class="box-choice">
-            <div class="rock box">
+            <div class="rock box" id="rock-com">
               <img src="assets/batu.png" alt="rock" />
             </div>
-            <div class="paper box">
+            <div class="paper box" id="paper-com">
               <img src="assets/kertas.png" alt="paper" />
             </div>
-            <div class="scissors box">
+            <div class="scissors box" id="scissors-com">
               <img src="assets/gunting.png" alt="scissor" />
             </div>
           </div>
