serving static file expressjs

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="navigation">
       <div class="back-btn">
-        <a href="../landingpage/index.html">&lt;</a>
+        <a href="http://localhost:3000/home">&lt;</a>
       </div>
       <div class="logo">
         <img src="assets/logo.png" alt="logo" />
