--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -40,7 +40,7 @@
       <div class="content">
         <h1>play traditional game</h1>
         <p>experience new traditional game play</p>
-        <a href="../game/index.html">
+        <a href="http://localhost:3000/games">
           <button class="btn btn-warning">trial</button>
         </a>
       </div>
